3-apps/authentik/kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.authentik.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: authentik
          port: 80
    - match: Host(`authentik.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: authentik
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: russellhost-tls
